--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Solutions/005-solution.md",
+            "file": "Solutions/007-solutions.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Solutions/005-solution.md",
+                "file": "Solutions/007-solutions.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "35a73a2f5ae21d7b",
   "lastOpenFiles": [
+    "Solutions/007-solutions.md",
+    "007-print-problems.md",
+    "Solutions/006-solution.md",
+    "006-easy-loops.md",
     "Solutions/005-solution.md",
     "Solutions/004-solution.md",
     "005-string-to-number.md",
     "004-divide-two-ways.md",
     "003-basic-math.md",
-    "Solutions/003-solution.md",
-    "Solutions/002-solution.md",
-    "002-if-else.md",
-    "001-hello-world.md",
-    "README.md"
+    "Solutions/003-solution.md"
   ]
 }
